# py-count-occurrences

./: .flake8  .gitignore  README.md  Untitled-1.py  check_install.py  checklist.md  cls  count_occurences  count_occurrences  dllafsdkj  file_new_for_test  main.py  main_misha_sanin.py  old-requirements.txt  popa  pull request  py_couny  pyproject.toml  requirements.txt  sdf  task.py  viva  write-func.ipynb
.github/workflows/: Kauã  test.yml
app/: Mutable & Immutable.py  __init__.py  create_dictionary.py  decorators.py  main.py  test_count_occurrences.py
py-count-occurrences/: README.md
py-count-occurrences/app/: main.py
tests/: __init__.py  io step.py  test_main.py
